microconfig-core/src/test/resources/repo/components/exceptions/bad/badDelimiter/exception.prop
Incorrect delimiter in 'keyvalue' in '../components/exceptions/bad/badDelimiter/application.prop.properties:1'
Property must contain ':' or '=' as delimiter.